# ropod_hri

./: LICENSE  README.md
ropod_hri/: CMakeLists.txt  package.xml
ropod_led_communication/: CMakeLists.txt  README.md  package.xml  setup.py
ropod_led_communication/arduino/: circuit_playground.ino
ropod_led_communication/ros/launch/: led_communication.launch
ropod_led_communication/ros/scripts/: led_communication
ropod_led_communication/ros/src/ropod_led_communication/: circuit_playground_comm.py  led_communication.py
ropod_sound_collections/: CMakeLists.txt  package.xml
ropod_sound_communication/: CMakeLists.txt  README.md  package.xml  setup.py
ropod_sound_communication/config/: sound_config.yaml
ropod_sound_communication/ros/cfg/: soundCommunication.cfg
ropod_sound_communication/ros/launch/: sound_communication.launch  sound_test.launch
ropod_sound_communication/ros/scripts/: sound_communication
ropod_sound_communication/ros/src/ropod_sound_communication/: sound_communication.py
ropod_sound_vocalisation/: CMakeLists.txt  README.md  package.xml  setup.py
ropod_sound_vocalisation/ros/launch/: sound_vocalisation.launch
ropod_sound_vocalisation/ros/scripts/: sound_vocaliser
