<?xml version="1.0"?>
<package>
  <name>ropod_hri</name>
  <version>1.0.0</version>
  <description>Metapackage for human-robot interaction packages</description>

  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
