<?xml version="1.0"?>
<package>
  <name>ropod_led_communication</name>
  <version>0.1.0</version>
  <description>Node to send commands to NeoPixels based on various topics and statuses</description>

  <author email="santosh.thoduka@h-brs.de">Santosh Thoduka</author>
  <maintainer email="santosh.thoduka@h-brs.de">Santosh Thoduka</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>

  <test_depend>roslaunch</test_depend>
</package>
